teste rápido multilingue (working)

--- a/language/en.json
+++ b/language/en.json
@@ -1,5 +1,5 @@
-{ 
-    "date": "Dateeeeeeeeeeeeeeeee", 
-    "save": "Save",
-    "cancel": "Cancel" 
+{
+  "home": "Home",
+  "about": "About Us"
 }
+
