--- a/language/pt.json
+++ b/language/pt.json
@@ -1,5 +1,5 @@
-{ 
-    "date": "Dataaaaaaaaaaaaaaaaaaa", 
-    "save": "Guardar",
-    "cancel": "Cancelar" 
-}
+{
+    "home": "Início",
+    "about": "Acerca"
+  }
+  
